--- a/starter_code/views/album.hbs
+++ b/starter_code/views/album.hbs
@@ -1,2 +1,8 @@
 welcome to the albums page
-
+<ul>
+{{#each albumsToHBS}}
+    <li>{{this.name}}</li>
+    <li>{{this.release_date}}</li>
+    <li><img width="200px" src="{{this.images.[0].url}}"/></li>
+{{/each}}
+</ul>
