--- a/starter_code/views/album.hbs
+++ b/starter_code/views/album.hbs
@@ -4,5 +4,6 @@ welcome to the albums page
     <li>{{this.name}}</li>
     <li>{{this.release_date}}</li>
     <li><img width="200px" src="{{this.images.[0].url}}"/></li>
+    <a href="/tracks/{{id}}">Show tracks</a>
 {{/each}}
 </ul>
